[package]
name = "nuts-rs"
version = "0.1.0"
authors = ["Robert den Harink <robert@robhar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
semver = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.20"