[package]
name = "nuts"
version = "0.2.2"
authors = ["Danko Adamczyk <danko@tacitic.com>", "Robert den Harink <robert@tacitic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
semver = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.9.20"
octokit = { path = "../octokit" }
signed-urls = { path = "../signed-urls" }
tempfile = "3.1.0"
failure = "0.1.5"
