[package]
name = "octokit"
version = "0.1.0"
authors = ["Robert den Harink <robert@robhar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
nom = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
